@@ -26,10 +26,10 @@ import java.math.BigDecimal;
 import java.time.Instant;
 import java.util.ArrayDeque;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Deque;
 import java.util.List;
 import java.util.function.Function;
+import org.jspecify.annotations.Nullable;
 import org.openqa.selenium.internal.Require;
 
 /**
@@ -75,7 +75,7 @@ public class JsonInput implements Closeable {
    * @throws JsonException if this {@code JsonInput} has already begun processing its input
    */
   public JsonInput addCoercers(TypeCoercer<?>... coercers) {
-    return addCoercers(Arrays.asList(coercers));
+    return addCoercers(List.of(coercers));
   }
 
   /**
@@ -206,7 +206,7 @@ public class JsonInput implements Closeable {
    * @throws JsonException if the next element isn't a {@code null}
    * @throws UncheckedIOException if an I/O exception is encountered
    */
-  public Object nextNull() {
+  public @Nullable Object nextNull() {
     expect(JsonType.NULL);
     return read("null", str -> null);
   }
@@ -220,31 +220,43 @@ public class JsonInput implements Closeable {
    */
   public Number nextNumber() {
     expect(JsonType.NUMBER);
+    boolean decimal = false;
     StringBuilder builder = new StringBuilder();
     // We know it's safe to use a do/while loop since the first character was a number
-    boolean fractionalPart = false;
+    boolean read = true;
     do {
-      char read = input.peek();
-      if (Character.isDigit(read)
-          || read == '+'
-          || read == '-'
-          || read == 'e'
-          || read == 'E'
-          || read == '.') {
-        builder.append(input.read());
-      } else {
-        break;
+      switch (input.peek()) {
+        case '-':
+        case '+':
+        case '0':
+        case '1':
+        case '2':
+        case '3':
+        case '4':
+        case '5':
+        case '6':
+        case '7':
+        case '8':
+        case '9':
+          builder.append(input.read());
+          break;
+        case '.':
+        case 'e':
+        case 'E':
+          decimal = true;
+          builder.append(input.read());
+          break;
+        default:
+          read = false;
       }
-
-      fractionalPart |= (read == '.');
-    } while (true);
+    } while (read);
 
     try {
-      Number number = new BigDecimal(builder.toString());
-      if (fractionalPart) {
-        return number.doubleValue();
+      if (!decimal) {
+        return Long.valueOf(builder.toString());
       }
-      return number.longValue();
+
+      return new BigDecimal(builder.toString()).doubleValue();
     } catch (NumberFormatException e) {
       throw new JsonException("Unable to parse to a number: " + builder + ". " + input);
     }
@@ -269,7 +281,7 @@ public class JsonInput implements Closeable {
    * @throws JsonException if the next element isn't a {@code Long}
    * @throws UncheckedIOException if an I/O exception is encountered
    */
-  public Instant nextInstant() {
+  public @Nullable Instant nextInstant() {
     Long time = read(Long.class);
     return (null != time) ? Instant.ofEpochSecond(time) : null;
   }
@@ -416,7 +428,7 @@ public class JsonInput implements Closeable {
    * @throws JsonException if coercion of the next element to the specified type fails
    * @throws UncheckedIOException if an I/O exception is encountered
    */
-  public <T> T read(Type type) {
+  public <T> @Nullable T read(Type type) {
     markReadPerformed();
     skipWhitespace(input);
 
@@ -504,7 +516,7 @@ public class JsonInput implements Closeable {
    * @param <X> data type returned by the supplied mapper
    * @throws UncheckedIOException if an I/O exception is encountered
    */
-  private <X> X read(String toCompare, Function<String, X> mapper) {
+  private <X extends @Nullable Object> X read(String toCompare, Function<String, X> mapper) {
     skipWhitespace(input);
 
     int toCompareLength = toCompare.length();
